<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/image_size"
            android:contentDescription="@string/image_description"
            android:scaleType="centerCrop"
            android:src="@drawable/reading_writing" />

        <TextView
            style="@style/textStyles"
            android:text="@string/company_name"
            android:textSize="@dimen/text_bigger" />

        <TextView
            style="@style/textStyles"
            android:text="@string/company_description"
            android:paddingBottom="@dimen/small_padding"/>

        <TextView
            style="@style/textStyles.Clickable"
            android:drawableStart="@drawable/email_icon"
            android:onClick="sendMail"
            android:text="@string/e_mail" />

        <TextView
            style="@style/textStyles.Clickable"
            android:drawableStart="@drawable/phone_icon"
            android:linksClickable="true"
            android:onClick="dialPhoneNumber"
            android:text="@string/phone" />

        <TextView
            style="@style/textStyles.Clickable"
            android:drawableStart="@drawable/web_icon"
            android:onClick="openSite"
            android:text="@string/www_address" />

        <TextView
            android:id="@+id/facebook_txt"
            style="@style/textStyles.Clickable"
            android:drawableStart="@drawable/facebook"
            android:text="@string/company_fb" />

        <TextView
            android:id="@+id/instagram_txt"
            style="@style/textStyles.Clickable"
            android:drawableStart="@drawable/instagram"
            android:onClick="openInstagram"
            android:text="@string/company_instagram" />

        <TextView
            style="@style/textStyles"
            android:text="@string/write_us"
            android:paddingTop="@dimen/small_padding"/>
    </LinearLayout>
</ScrollView>
